# atlas

./: .env.example  .gitignore  APPLY.md  Makefile  PATCH_main.py.txt  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  contributing.md  project_status.md  specification.md  user_guide.md
samples/: README.md
src/atlas/: app.py
src/atlas/api/: main.py
src/atlas/application/: enums.py  exceptions.py  models.py  service.py  storage.py  transitions.py
src/atlas/candidate/: builder.py  enums.py  exceptions.py  models.py  service.py  storage.py
src/atlas/common/: enums.py  http.py
src/atlas/config/: __init__.py  paths.py  settings.py
src/atlas/database/: session.py
src/atlas/discovery/: base.py  client.py  exceptions.py  models.py  service.py
src/atlas/job/: enums.py  models.py  service.py  storage.py
src/atlas/jobs/: models.py  storage.py
src/atlas/llm/: client.py  exceptions.py
src/atlas/matching/: deduplicator.py  exceptions.py  matcher.py  models.py  policy.py  service.py
src/atlas/ranking/: enums.py  exceptions.py  models.py  policy.py  ranker.py  service.py
src/atlas/resume/: exceptions.py  extractor.py  mapper.py  parser.py  schema.py  service.py
src/atlas/utils/: logger.py
src/atlas/workflows/: find_opportunities.py
tests/fixtures/: job.py  loader.py
tests/fixtures/ashby/: listing.json
tests/fixtures/factories/: application.py  candidate.py
tests/fixtures/greenhouse/: detail.json
tests/fixtures/lever/: listing.json
tests/unit/application/: test_service.py  test_storage.py  test_transitions.py
(+33 files in other folders)
